chore: add new file inc and ignore rule

--- a/run/Makefile
+++ b/run/Makefile
@@ -1,22 +1,27 @@
 SIM_TOOL ?= iverilog
 RUN_TOOL ?= vvp
-SIM_OPTIONS := -g2012 -Wall -s asic_system
-TEST_ARGS ?=
+
+# WARN_OPTIONS := -Wanachronisms -Wimplicit -Wportbind -Wselect-range -Winfloop
+# WARN_OPTIONS += -Wsensitivity-entire-vector -Wsensitivity-entire-array
+WARN_OPTIONS := -Wall -Winfloop -Wno-timescale
+SIM_OPTIONS := -g2012 -s asic_system $(WARN_OPTIONS)
+TEST_ARGS ?= default_args
 SIMV_PROG := build/simv
 
+FILE_LIST := -f ../filelist/top.f
+FILE_LIST += -f ../filelist/perip.f
 
-TOP_LIST := ../filelist/top.f
-
-FILE_LIST := -f $(TOP_LIST)
+INC_LIST := -I ../perip/uart/rtl
+INC_LIST += -I ../top
 
 update-filelist:
 	@../script/gen_filelist.py
 
 comp: update-filelist
 	@mkdir -p build
-	${SIM_TOOL} $(SIM_OPTIONS) $(FILE_LIST) ../tb/asic_system.v -o $(SIMV_PROG)
+	${SIM_TOOL} $(SIM_OPTIONS) $(FILE_LIST) $(INC_LIST) ../tb/asic_system.v -o $(SIMV_PROG)
 
-run:
+run: comp
 	vvp -l build/run.log -n $(SIMV_PROG) +$(TEST_ARGS) -fst
 
 clean:
